refactor: replace string literals with constants across services, controllers, and models